manga_db/webGUI/static/style.css
/* ... */
.green-fcolor { color: #31c131!important; }
.img-responsive {
    display: block;
    max-width: 100%;
    height: auto;
}
.mdb-navbar-brand {
    font-size: 1.75rem;
    font-weight: bold;
}
.mdb-nav {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    z-index: 999; /* so pos fixed next/prev dont overlap */
}
.mdb-nav-right {
    display: flex;
    flex-flow: row nowrap;
    flex-grow: 1;
    justify-content: flex-end;
}
.page           { margin: 1rem auto 2rem auto; width: 75%;
                  padding: 0.8em}
#page-next {
    position: fixed;
    top: 0%;
    right: 0;
    height: 100%;
}
#page-next:hover {
    color: #f34c4c;
    background-color: #7575750f;
}
#page-next-inner {
	position: relative;
	top: 50%;
    padding-left: 0.3em;
    padding-right: 0.3em;
    font-size: 4em;
    font-weight: bold;
}
#page-prev {
    position: fixed;
    top: 0%;
    left: 0;
    height: 100%;
}
#page-prev:hover {
    color: #f34c4c;
    background-color: #7575750f;
}
#page-prev-inner {
	position: relative;
	top: 50%;
    padding-left: 0.3em;
    padding-right: 0.3em;
    font-size: 4em;
    font-weight: bold;
}
.button-leftmost {
    margin-left: 0;
}
.list-tag {
	position: relative;
	padding-right: 17px!important;
}
.list-tag-border {
	border: #22a7f0 1px solid;
}
.list-tag a {
	text-decoration: none!important;
	color: #fff!important;
}
input[type="checkbox"].mdb-checkboxes {
	/* input[type=checkbox], input[type=radio] { */
	vertical-align: middle;
	position: relative;
	bottom: 1px;
	margin: 0 3px 0 0;
}
ul.flash-messages li label {
	font-weight: normal;
	margin-bottom: 0px;
}
.mdb-list-remove {
    display: inline-block;
    position: absolute;
    top: 0;
    bottom: 0;
    vertical-align: middle;
    right: 0;
    text-align: center;
    padding: 3px;
    padding-top: 4px;
    font-size: 0.8em;
    border-left: 1px solid #22a7f0;
}
/* Dropdown Button */
.mdb-drop-btn {
    	cursor: pointer;
}

/* Dropdown button on hover & focus */
.mdb-drop-btn:hover, .mdb-drop-btn:focus {
    background-color: #4c4c4c;
}

/* The container <div> - needed to position the dropdown content */
.mdb-dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.mdb-dropdown-content {
    display: none;
    position: absolute;
    background-color: #333;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    /* limit height and add scrollbar with overflow auto */
    overflow: auto;
    max-height: 250px;
}

/* Links inside the dropdown */
.mdb-dropdown-content a {
    color: #fff;
    padding: 3px 12px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.mdb-dropdown-content a:hover {background-color: #4c4c4c}
/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.mdb-show {display:block;}

.kw-headline hr {
    display: block;
    margin-top: 0;
    margin-bottom: .5rem;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    border-color: #fff;
}
.kw-headline span {
    margin-left: .25rem;
    font-size: 1.25rem;
    letter-spacing: 1.5px;
}
.ext-info-row {
    margin-bottom: 1.5rem;
}
.ext-info-container {
    float: left;
    width: 100%;
    padding-left: .25rem;
}
.ext-info-container hr {
    display: block;
    margin-top: .2rem;
    margin-bottom: .2rem;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    border-color: #2196f3;
}
.ext-info-inner {
    font-size: .9rem;
    font-weight: 400;
}
.ext-info-title {
    font-size: 1.1rem;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
}
.ext-info-line {
    display: table-row;
}
.ext-info {
    display: table-cell;
    padding-right: 13px;
}
.ext-info-data {
    display: table-cell;
}
.text-input {
    background-color: #2d2d2d;
    border: none;
    color: #fff;
}
#ext-info-add {
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
}
#add-ext-info-inp {
    line-height: 1.5;
    padding-left: 27px;
    flex: 1;
    margin-right: .3rem;
    /* shift by icon size */
    margin-left: -15px;

}
#add-ext-info-icon {
    display: inline-block !important;
    min-width: 15px;
    min-height: 15px;
    line-height: 32px;
    position: relative;
    left: 7px;
}
#add-ext-info-btn {
    color: #1a1a1a; margin-left: 5px;
    margin-right: 0; margin-top: auto; margin-bottom: auto; padding: 6px; 
    flex: 0 0 0;
}
.edit-book-info {
	vertical-align: middle;
	display: table-cell;
}
.choose-book-info-container {
	font-family: 'Open Sans',sans-serif;
        color: #fff;
        display: table;
        border-collapse: separate;
}
ul.flash-messages {
   list-style: none;
   margin-left: 0;
   padding-left: 1em;
}
li.info {
    font-size: 1em;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
}
li.title {
    font-size: 18px;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
    margin-bottom: 0.5em 0;
}
li.warning {
	font-size: 20px;
	color: #f67764; /* #f67764 */
}
ul.flash-messages a.underline {
    text-decoration: underline;
}

.star-inactive {
    color: #fff !important;
}
.star-active {
    color: #22a7f0 !important;
}
#MyRating i:hover {
    color: #c00 !important;
}

    
/* change placeholder for inputs */
::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #bdbdbd;
    opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #bdbdbd;
}

::-ms-input-placeholder { /* Microsoft Edge */
    color: #bdbdbd;
}
/* ... */

